@@ -9,6 +9,9 @@ performance improvements:
 deleted and modified parameters:
 - rename parameter: "constraints/orbisack/orbisack/coverseparation" to "constraints/orbisack/coverseparation"
 
+fixed bugs:
+- fixed wrong cast in LP iteration limit computation in proximity search heuristic
+
 
 SCIP version 5.0.0
 ==================
